--- a/questionnaire.html
+++ b/questionnaire.html
@@ -100,79 +100,79 @@
     <!-- Formulaire contenant les questions -->
     <form id="questionForm">
         <div class="question" id="question1">
-            <label for="q1">Quel genre de territoire te semble le plus intrigant ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 1)">Un monde où les néons remplacent les étoiles, et où chaque recoin peut cacher une promesse ou un piège.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 1)">Des terres oubliées, où des créatures et des mystères ancestraux attendent ceux assez audacieux pour les découvrir.</span>
+            <label for="q1">Quel genre de monde te semble le plus intrigant ?</label><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 1)">Un monde fantastique.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 1)">Un monde futuriste.</span><br>
         </div>
         <div class="question" id="question2">
             <label for="q2">Quel type de voyage te fascine le plus ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 2)">Une quête sans fin à travers une cité hyper-connectée, où le futur semble constamment réinventé.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 2)">Un périple solitaire, entre ruines et forêts sombres, où chaque rencontre te rapproche de ton destin incertain.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 2)">Un voyage plein d'histoires surprenante.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 2)">Un voyage vers l'inconnu.</span>
         </div>
         <div class="question" id="question3">
-            <label for="q3">Quel genre de pouvoir aimerais-tu maîtriser ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 3)">La capacité de manipuler la technologie à ta guise, transformant le monde autour de toi selon tes désirs.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 3)">Un pouvoir primordial, forgé par des âges de guerre, où chaque geste de force a un impact monumental sur l'univers.</span>
+            <label for="q3">Quel genre de aptitude aimerais-tu maîtriser ?</label><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 3)">La magie.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 3)">La technologie.</span><br>
         </div>
         <div class="question" id="question4">
             <label for="q4">Comment réagirais-tu face à une menace imminente ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 4)">En utilisant tes ressources et ta rapidité, prêt à déjouer l’adversité avec des réflexes précis et des gadgets ingénieux.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 4)">En faisant face au danger avec calme et concentration, sachant qu’une seule erreur pourrait être fatale.</span>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 4)">En faisant face au danger avec calme et concentration.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 4)">En utilisant tes ressources à disposition.</span><br>
         </div>
         <div class="question" id="question5">
             <label for="q5">Quel type de protagoniste te correspondrait le mieux ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 5)">Un solitaire, maîtrisant la technologie et l’information, mais toujours en quête d’une vérité qui échappe.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 5)">Un guerrier mystérieux, qui cherche à restaurer un équilibre ancien dans un monde dévasté.</span>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 5)">Un élu, choisi par le destin.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 5)">Un inconnu, choisi par le hasard.</span><br>
         </div>
         <div class="question" id="question6">
             <label for="q6">Quel environnement t’attire le plus pour t'y perdre ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 6)">Un univers saturé de lumière artificielle et de mouvements rapides, où tout peut être acheté ou échangé.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 6)">Une vaste étendue où chaque ruine dissimule des secrets oubliés, et où la survie semble être un combat quotidien.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 6)">Une ville immense.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 6)">Une forêt mystérieuse.</span>
         </div>
         <div class="question" id="question7">
             <label for="q7">Quel type d’aventure préfères-tu vivre ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 7)">Une série de péripéties intenses où l’issue dépend de ton intelligence et de ta capacité à anticiper les dangers.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 7)">Un voyage épique, fait de combats sans fin et de mystères qui se dévoilent à chaque épreuve.</span>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 7)">Un voyage épique.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 7)">Une série de péripéties intenses.</span><br>
         </div>
         <div class="question" id="question8">
             <label for="q8">Quel aspect d’un conflit te semble le plus captivant ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 8)">L’aspect mental, où les choix stratégiques, l’infiltration et la manipulation jouent un rôle central.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 8)">L’affrontement direct, où la pure force et la maîtrise des armes font la différence entre la vie et la mort.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 8)">L’aspect mental.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 8)">L’affrontement direct.</span>
         </div>
         <div class="question" id="question9">
             <label for="q9">Comment définirais-tu ton idéal de liberté ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 9)">La possibilité de remodeler le monde à ta manière, où chaque augmentation ou amélioration te rend plus puissant.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 9)">La liberté de choisir son propre chemin, même au prix de sacrifices personnels et de luttes intenses.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 9)">Remodeler le monde à ta manière.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 9)">Choisir son propre chemin.</span>
         </div>
         <div class="question" id="question10">
             <label for="q10">Quel rôle préfères-tu dans une histoire ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 10)">Un protagoniste complexe, évoluant dans un monde où le contrôle et l’illusion règnent.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 10)">Un héros solitaire, luttant contre des forces qui dépassent sa compréhension et son pouvoir.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 10)">Un protagoniste complexe.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 10)">Un protagoniste silencieux.</span>
         </div>
         <div class="question" id="question11">
             <label for="q11">Quel type de créature te semble le plus fascinant ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 11)">Une entité cybernétique, fusionnée avec la technologie, dont la nature est aussi floue que dangereuse.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 11)">Une créature mythologique, née de l’ombre du passé, portant en elle la sagesse d’un âge révolu.</span>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 11)">Une créature mythologique.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 11)">Un cyborg</span><br>
         </div>
         <div class="question" id="question12">
             <label for="q12">Quel défi te semble le plus stimulant ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 12)">Une quête de pouvoir où l’issue dépend de ton habileté à naviguer entre les alliés et les ennemis.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 12)">Un combat épique contre une force supérieure, où la victoire est incertaine et chaque erreur coûte cher.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 12)">Une quête de liberté.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 12)">Un affrontement contre les dieux.</span>
         </div>
         <div class="question" id="question13">
             <label for="q13">Quel est ton idéal de récompense dans un jeu ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 13)">La possibilité de remodeler ton apparence et tes compétences à ta guise, offrant une personnalisation sans fin.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 13)">La satisfaction de découvrir un artefact ancien, caché dans un lieu oublié, mais chargé d’un immense pouvoir.</span>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 13)">Un objet unique.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 13)">Une personnalisation infinie.</span><br>
         </div>
         <div class="question" id="question14">
             <label for="q14">Quel type de mystère te pousse à avancer ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 14)">Un secret lié à la société elle-même, dont les fils invisibles se tissent à travers le pouvoir et la technologie.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 14)">Un mystère ancien, inscrit dans les pierres et les ruines, dont la révélation pourrait bouleverser l’équilibre du monde.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 14)">Comprendre qui tu es.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 14)">Comprendre le monde qui t'entoure.</span>
         </div>
         <div class="question" id="question15">
             <label for="q15">Quel aspect d’une histoire t’interpelle le plus ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 15)">L’intrigue, où chaque personnage semble jouer un rôle dans un grand jeu de manipulation et de choix difficiles.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 15)">L’aventure, où l’inconnu est omniprésent et où chaque moment passé à explorer te rapproche un peu plus de la vérité.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 15)">L’intrigue, où chaque personnage semble jouer un rôle.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 15)">L’aventure, où l’inconnu est omniprésent.</span>
         </div>
         <button type="button" id="backButton" onclick="previousQuestion()">← Retour</button>
     </form>
