--- a/questionnaire.html
+++ b/questionnaire.html
@@ -101,78 +101,78 @@
     <form id="questionForm">
         <div class="question" id="question1">
             <label for="q1">Quel genre de monde te semble le plus intrigant ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 1)">Un monde fantastique.</span>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 1)">Un monde futuriste.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 1)">Un monde fantastique</span><br>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 1)">Un monde futuriste</span>
         </div>
         <div class="question" id="question2">
             <label for="q2">Quel type de voyage te fascine le plus ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 2)">Un voyage plein d'histoires surprenante.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 2)">Un voyage vers l'inconnu.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 2)">Un voyage plein d'histoires surprenantes</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 2)">Un voyage vers l'inconnu</span>
         </div>
         <div class="question" id="question3">
-            <label for="q3">Quel genre de aptitude aimerais-tu maîtriser ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 3)">La magie.</span>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 3)">La technologie.</span><br>
+            <label for="q3">Quelle capacité aimerais-tu maîtriser ?</label><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 3)">La magie</span><br>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 3)">La technologie</span>
         </div>
         <div class="question" id="question4">
             <label for="q4">Comment réagirais-tu face à une menace imminente ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 4)">En faisant face au danger avec calme et concentration.</span>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 4)">En utilisant tes ressources à disposition.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 4)">En faisant face au danger</span><br>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 4)">En utilisant des moyens détournés</span>
         </div>
         <div class="question" id="question5">
             <label for="q5">Quel type de protagoniste te correspondrait le mieux ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 5)">Un élu, choisi par le destin.</span>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 5)">Un inconnu, choisi par le hasard.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 5)">Un élu, choisi par le destin</span><br>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 5)">Un inconnu, choisi par le hasard</span>
         </div>
         <div class="question" id="question6">
             <label for="q6">Quel environnement t’attire le plus pour t'y perdre ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 6)">Une ville immense.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 6)">Une forêt mystérieuse.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 6)">Une ville immense</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 6)">Une forêt mystérieuse</span>
         </div>
         <div class="question" id="question7">
             <label for="q7">Quel type d’aventure préfères-tu vivre ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 7)">Un voyage épique.</span>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 7)">Une série de péripéties intenses.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 7)">Un voyage épique</span><br>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 7)">Une série de péripéties intenses</span>
         </div>
         <div class="question" id="question8">
             <label for="q8">Quel aspect d’un conflit te semble le plus captivant ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 8)">L’aspect mental.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 8)">L’affrontement direct.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 8)">L’aspect mental</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 8)">L’affrontement direct</span>
         </div>
         <div class="question" id="question9">
             <label for="q9">Comment définirais-tu ton idéal de liberté ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 9)">Remodeler le monde à ta manière.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 9)">Choisir son propre chemin.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 9)">Avancer sans se préocuper des conséquences</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 9)">Changer le monde à ton idéal</span>
         </div>
         <div class="question" id="question10">
             <label for="q10">Quel rôle préfères-tu dans une histoire ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 10)">Un protagoniste complexe.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 10)">Un protagoniste silencieux.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 10)">Un protagoniste complexe</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 10)">Un protagoniste silencieux</span>
         </div>
         <div class="question" id="question11">
             <label for="q11">Quel type de créature te semble le plus fascinant ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 11)">Une créature mythologique.</span>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 11)">Un cyborg</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 11)">Une créature mythologique</span><br>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 11)">Un cyborg</span>
         </div>
         <div class="question" id="question12">
             <label for="q12">Quel défi te semble le plus stimulant ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 12)">Une quête de liberté.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 12)">Un affrontement contre les dieux.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 12)">Une quête de liberté</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 12)">Un affrontement contre les dieux</span>
         </div>
         <div class="question" id="question13">
             <label for="q13">Quel est ton idéal de récompense dans un jeu ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 13)">Un objet unique.</span>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 13)">Une personnalisation infinie.</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 13)">Un objet unique</span><br>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 13)">Une personnalisation infinie</span>
         </div>
         <div class="question" id="question14">
             <label for="q14">Quel type de mystère te pousse à avancer ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 14)">Comprendre qui tu es.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 14)">Comprendre le monde qui t'entoure.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 14)">Comprendre qui tu es</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 14)">Comprendre le monde qui t'entoure</span>
         </div>
         <div class="question" id="question15">
             <label for="q15">Quel aspect d’une histoire t’interpelle le plus ?</label><br>
-            <span class="answer-text" onclick="selectAnswer('cyberpunk', 15)">L’intrigue, où chaque personnage semble jouer un rôle.</span><br>
-            <span class="answer-text" onclick="selectAnswer('eldenring', 15)">L’aventure, où l’inconnu est omniprésent.</span>
+            <span class="answer-text" onclick="selectAnswer('cyberpunk', 15)">L’intrigue, où chaque personnage semble jouer un rôle</span><br>
+            <span class="answer-text" onclick="selectAnswer('eldenring', 15)">L’aventure, où l’inconnu est omniprésent</span>
         </div>
         <button type="button" id="backButton" onclick="previousQuestion()">← Retour</button>
     </form>
